connect frontend create issue wuth backend
