# backend/openapi.yaml
@@ -15,6 +15,8 @@ tags:
     description: endpoints related to appointments
   - name: images-related
     description: endpoints related to image generation and signatures
+  - name: v2-clerk-supported
+    description: endpoints that support usage of Clerk for various features
 
 paths:
   /api/generate-image-signature:
@@ -293,7 +295,52 @@ paths:
       deprecated: false
       security: 
         - BearerAuth: []
-
+  /api/issues/v2/create:
+    post:
+      summary: Create a new issue (v2)
+      operationId: createIssueV2
+      description: Allows a user to create a new issue (v2). Note that this requires clerk token from frontend.
+      tags:
+        - issues-related
+        - v2-clerk-supported
+      requestBody:
+        description: Contains the details of the issue to be created
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/models.issueCreateReqObj"
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/models.issueCreateResObj"
+        "400":
+          description: Bad Request - Invalid input data
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Bad Request - Invalid input data
+        "401":
+          description: Unauthorized - Invalid token
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Unauthorized - Invalid token
+        "500":
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Internal Server Error
+      deprecated: false
+      security:
+        - BearerAuth: []
   /api/issues/delete-issue/{issue_id}:
     delete:
       summary: Delete an issue
@@ -1364,6 +1411,70 @@ paths:
       deprecated: false
       security:
         - BearerAuth: []
+  /api/authoauthorities/get-authorities-by-user:
+    get:
+      summary: Get authorities by user
+      operationId: getAuthoritiesByUser
+      description: Retrieves all authorities associated with the authenticated user
+      tags:
+        - authority-related
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/models.authorityData"
+        "401":
+          description: Unauthorized - Invalid token
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Unauthorized - Invalid token
+        "500":
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Internal Server Error  
+      deprecated: false
+      security:
+        - BearerAuth: []
+  /api/authorities/get-authority-by-official:
+    get:
+      summary: Get authority by official
+      operationId: getAuthorityByOfficial
+      description: Retrieves the authority associated with the authenticated government official
+      tags:
+        - authority-related
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/models.authorityData"
+        "401":
+          description: Unauthorized - Invalid token
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Unauthorized - Invalid token
+        "500":
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Internal Server Error  
+      deprecated: false
+      security:
+        - BearerAuth: []
 components:
   securitySchemes:
     BearerAuth:
@@ -1810,4 +1921,30 @@ components:
       required:
         - appointment_id
         - file_urls
-
+    models.authorityData:
+      type: object
+      properties:
+      authority_id:
+        type: integer
+        format: int64
+        example: 1
+      name:
+        type: string
+        example: "Colombo Municipal Council"
+      ministry:
+        type: string
+        nullable: true
+        example: null
+      location:
+        type: string
+        nullable: true
+        example: null
+      description:
+        type: string
+        nullable: true
+        example: "The local authority for Colombo city."
+      category_id:
+        type: integer
+        format: int64
+        nullable: true
+        example: null
