# backend/server.js
@@ -8,6 +8,7 @@ const userRouter = require("./routes/UserRouter");
 const officialRouter = require("./routes/OfficialRouter");
 const timeSlotRouter = require("./routes/TimeSlotRouter");
 const appointmentRouter = require("./routes/AppointmentRouter");
+const AuthorityRouter = require("./routes/AuthorityRouter");
 const generateImageSignatureRouter = require("./routes/GenerateImageSignatureRouter");
 const imageUploadRouter = require("./routes/ImageUploadRouter");
 
@@ -18,6 +19,7 @@ app.use("/api/users", userRouter);
 app.use("/api/officials", officialRouter);
 app.use("/api/time-slots", timeSlotRouter);
 app.use("/api/appointments", appointmentRouter);
+app.use("/api/authorities", AuthorityRouter);
 app.use("/api/generate-image-signature", generateImageSignatureRouter);
 app.use("/api/upload-image", imageUploadRouter);
 
